// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render() renders empty message 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-17 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 18px;
  font-size: 1.5em;
  opacity: 0.4;
  font-weight: bold;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <div
        className="glamor-17 glamor-18"
      >
        <PanelHeader>
          <StyledPanelHeader>
            <div
              className="glamor-13 glamor-14"
            >
              <StyledPanelHeading>
                <Component
                  className="glamor-9 glamor-6"
                >
                  <_default
                    className="glamor-9 glamor-6"
                  >
                    <div
                      className="glamor-6 glamor-7 glamor-8"
                    >
                      Environments
                    </div>
                  </_default>
                </Component>
              </StyledPanelHeading>
            </div>
          </StyledPanelHeader>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className=""
          >
            <EmptyMessage>
              <div
                className="glamor-15 glamor-16"
              >
                You don't have any environments yet.
              </div>
            </EmptyMessage>
          </div>
        </PanelBody>
      </div>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render() renders environment list 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-19 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-15 {
  box-sizing: border-box;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid;
}

.glamor-15:last-child {
  border: 0;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <div
        className="glamor-19 glamor-20"
      >
        <PanelHeader>
          <StyledPanelHeader>
            <div
              className="glamor-13 glamor-14"
            >
              <StyledPanelHeading>
                <Component
                  className="glamor-9 glamor-6"
                >
                  <_default
                    className="glamor-9 glamor-6"
                  >
                    <div
                      className="glamor-6 glamor-7 glamor-8"
                    >
                      Environments
                    </div>
                  </_default>
                </Component>
              </StyledPanelHeading>
            </div>
          </StyledPanelHeader>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className=""
          >
            <Row
              key="1"
              p={2}
            >
              <StyledRow
                p={2}
              >
                <Base
                  className="glamor-15 glamor-16"
                  p={2}
                >
                  <div
                    className="glamor-15 glamor-16"
                    is={null}
                  >
                    Production
                  </div>
                </Base>
              </StyledRow>
            </Row>
          </div>
        </PanelBody>
      </div>
    </Panel>
  </div>
</ProjectEnvironments>
`;
